chore: rebrand package from admin-bro to adminjs

--- a/example-app/tsconfig.json
+++ b/example-app/tsconfig.json
@@ -17,7 +17,7 @@
       "sourceMap": true,
       "paths": {
         "react": ["node_modules/@types/react"],
-        "admin-bro": ["node_modules/admin-bro"],
+        "adminjs": ["node_modules/adminjs"],
       }
   },
   "include": [
