--- a/example-app/package.json
+++ b/example-app/package.json
@@ -19,11 +19,10 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@admin-bro/express": "^3.1.0",
+    "@adminjs/express": "^4.0.0",
     "@mikro-orm/core": "^4.5.0",
     "@mikro-orm/postgresql": "^4.5.0",
-    "admin-bro-mikroorm": "^1.0.0",
-    "admin-bro": "^3.4.0-beta.9",
+    "adminjs": "^5.2.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
