feat: update Resource class so that it no longer requires static orm attribute

--- a/example-app/package.json
+++ b/example-app/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@adminjs/express": "^4.0.0",
+    "@adminjs/mikroorm": "^1.0.0",
     "@mikro-orm/core": "^4.5.0",
     "@mikro-orm/postgresql": "^4.5.0",
     "adminjs": "^5.2.2",
