--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jest": "^26.6.3",
     "reflect-metadata": "^0.1.13",
     "semantic-release": "^17.4.2",
+    "semantic-release-slack-bot": "^2.1.1",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
