chore: fit submodule to AdminJS dev workspace (#5)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "paths": {
       "react": ["node_modules/@types/react"],
       "styled-components": ["node_modules/@types/styled-components"]
-    }
+    },
+    "skipLibCheck": true
   },
   "include": [
     "./src/**/*.ts"
