--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2017",
-    "lib": [
-      "es2018",
-      "DOM"
-    ],
+    "lib": ["es2018", "DOM"],
     "sourceMap": true,
     "noImplicitAny": false,
     "strictNullChecks": true,
@@ -22,11 +19,6 @@
     },
     "skipLibCheck": true
   },
-  "include": [
-    "./src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "lib"
-  ]
+  "include": ["./src/**/*.ts", "./spec"],
+  "exclude": ["node_modules", "lib"]
 }
