--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     },
     "skipLibCheck": true
   },
-  "include": ["./src/**/*.ts", "./spec"],
+  "include": ["./src/**/*.ts"],
   "exclude": ["node_modules", "lib"]
 }
